--- a/assets/themes/the-program/css/_less-base.less
+++ b/assets/themes/the-program/css/_less-base.less
@@ -42,8 +42,12 @@ Font families
 No styleguide reference.
 */
 
+@font-stack: arial;
+@webfont: arial;
+/*
 @font-stack: consolas, monaco, monospace;
 @webfont: UbuntuMono-B, consolas, monaco, monospace;
+*/
 
 /*
 Base font size should be larger than 16px.
