--- a/assets/themes/the-program/css/style.css
+++ b/assets/themes/the-program/css/style.css
@@ -401,8 +401,8 @@ Calculation should be done via  http://j.mp/rNg5uA
 No styleguide reference.
 */
 body {
-  font-family: consolas, monaco, monospace;
-  font-size: 1em;
+  font-family: monospace;
+  font-size: 1.2m;
   line-height: 1.625em;
 }
 /*
@@ -418,7 +418,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: arial;
+  font-family: monospace;
 }
 h1,
 .h1 {
@@ -505,9 +505,7 @@ No styleguide reference.
  * http://www.fontsquirrel.com/fonts/Comfortaa
 */
 @font-face {
-  font-family: 'UbuntuMono-B';
-  src: url('/assets/themes/the-program/font/UbuntuMono-B-webfont.eot');
-  src: url('/assets/themes/the-program/font/UbuntuMono-B-webfont.eot?#iefix') format('embedded-opentype'), url('/assets/themes/the-program/font/UbuntuMono-B-webfont.woff') format('woff'), url('/assets/themes/the-program/font/UbuntuMono-B-webfont.ttf') format('truetype'), url('/assets/themes/the-program/font/UbuntuMono-B-webfont.svg#UbuntuMono-B') format('svg');
+  font-family: 'monospace';
   font-weight: normal !important;
   font-style: normal;
 }
