changed config and styles

--- a/assets/themes/the-program/css/style.css
+++ b/assets/themes/the-program/css/style.css
@@ -422,7 +422,7 @@ h6 {
 }
 h1,
 .h1 {
-  font-size: 30px;
+  font-size: 2.6em;
   line-height: 52px;
   margin-top: 52px;
   margin-bottom: 26px;
@@ -588,7 +588,8 @@ pre {
 /* HEADER
 --------------------------------------------------------------------------------- */
 .the-header .logo {
-  font-family: UbuntuMono-B, consolas, monaco, monospace;
+  font-family: monospace;
+  font-size: 1.6em;
   margin: 0;
 }
 .the-header .logo a:visited {
@@ -654,13 +655,17 @@ pre {
   margin-top: 0;
 }
 .unit-article a:link {
-  border-bottom: 1px dashed #c26164;
+  border-bottom: 1px dashed #DF3D4D;
 }
+
+.unit-article a:hover {
+	background-color:#DF3D4D; 
+	border-bottom:0px;
+	color: #FAFAFA;
+}
+
 .unit-article a:visited {
   border-bottom: 1px dashed #ad4346;
-}
-.unit-article a:hover {
-  border-bottom: 1px dashed #d08688;
 }
 .unit-article blockquote {
   border-left: 1em solid rgba(21, 25, 25, 0.8);
@@ -674,6 +679,7 @@ pre {
 .unit-article ol,
 .unit-article dl {
   padding-left: 0;
+  margin-left: 10px;
 }
 .unit-article ul {
   list-style: square;
@@ -791,41 +797,28 @@ pre {
 }
 /* post & page */
 .layout-page .tag_box {
-  background: url('/assets/themes/the-program/skin/100-90-5-monochrome.png') repeat 0 0 #999999;
-  padding: 0.8125em;
-  list-style: none;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
   border-radius: 3px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.4);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.4);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.4), 0 1px 0 rgba(255, 255, 255, 0.4);
+  margin-left:0px;
 }
 .layout-page .tag_box li {
   display: inline;
   line-height: normal;
   vertical-align: middle;
+  
 }
 .layout-page .tag_box a {
-  background-color: #99cc99;
+  background-color: #DF3D4D;
   float: left;
-  border: 1px solid #448844;
-  padding: 3px 6px 3px 6px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
+  border: 1px solid #DF3D4D;
+  padding: 6px 6px 3px;
+  -webkit-border-radius: cl53px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
   margin: 5px;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.4);
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-  -webkit-transition-duration: 0.2s;
   -moz-transition-duration: 0.2s;
   transition-duration: 0.2s;
   -webkit-user-select: none;
@@ -842,16 +835,13 @@ pre {
   border: solid #336633;
 }
 .layout-page .tag_box a:hover {
-  background-color: #77bb77;
-  border: 1px solid #336633;
 }
 .layout-page .tag_box a:hover span {
   background-color: #e1e1e1;
-  border: 1px solid #77bb77;
 }
 .layout-page .tag_box span {
   background-color: #fafafa;
-  border: 1px solid #99cc99;
+  border: 1px solid #DF3D4D;
   padding: 1px 5px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -860,25 +850,30 @@ pre {
   display: inline-block;
   position: relative;
   vertical-align: middle;
-  top: -2px;
+  top: -1px;
   font-weight: bold;
   font-size: 13px;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 /* FOOTER
 ----------------------------------------------- */
 .the-footer a:link {
-  color: #c26164;
+  color: #2d2d2d;
   border: 0;
 }
 .the-footer a:visited {
-  color: #ad4346;
+  color: #2d2d2d;
   border: 0;
 }
 .the-footer a:hover {
-  color: #d08688;
+  border: 0;
+}
+
+.the-footer a strong {
+  font-weight: bold;
+}
+.the-footer a:hover strong {
+  font-weight: bold;
+  color: ##DF3D4D;;
   border: 0;
 }
 .the-footer ul {
@@ -903,7 +898,7 @@ pre {
 }
 .the-header .unit-head .nav-global .logo a {
   display: block;
-  font-size: 30px;
+  font-size: 2.6em;
   line-height: 52px;
   padding-bottom: 26px;
 }
@@ -919,15 +914,23 @@ pre {
   padding: 26px;
 }
 .the-footer a:link {
-  color: #c26164;
+  color: #2d2d2d;
   border: 0;
 }
 .the-footer a:visited {
-  color: #ad4346;
+  color: #2d2d2d;
   border: 0;
 }
 .the-footer a:hover {
-  color: #d08688;
+  border: 0;
+}
+.the-footer a strong {
+  font-weight: bold;
+  border: 0;
+}
+.the-footer a:hover strong {
+  font-weight: bold;
+  color: #DF3D4D;
   border: 0;
 }
 .the-footer h4 {
@@ -959,12 +962,15 @@ pre {
   .the-header .unit-head .nav-global li a,
   .the-header .unit-head .nav-global li div {
     display: block;
-    padding: 26px;
     height: 26px;
+    font-size: 1.6em;
   }
   .the-header .unit-head .nav-global li a:hover {
-    background-color: #fff04a;
-    color: #474747;
+    background-color: #DF3D4D;
+   /*
+ color: #474747;
+*/
+color: #FAFAFA;
   }
   .the-header .unit-head .nav-global li:nth-child(2) {
     border-width: 0 1px;
@@ -979,7 +985,7 @@ pre {
     width: 100%;
   }
   .the-header .unit-head .nav-global .logo a {
-    font-size: 30px;
+    font-size: 2.6em;
     line-height: normal;
   }
   .the-header .unit-head .nav-global .logo a:hover {
@@ -1052,7 +1058,7 @@ pre {
   }
   .the-header .unit-head .nav-global .logo a {
     display: block;
-    font-size: 30px;
+    font-size: 2.6em;
     line-height: 52px;
     margin-bottom: 26px;
     padding-left: 5px;
