--- a/_includes/themes/the-program/page.html
+++ b/_includes/themes/the-program/page.html
@@ -17,9 +17,9 @@
 
 			<footer class="unit-foot">
 				<div class="unit-inner unit-foot-inner">
-					<p class="gotop">
+<!--					<p class="gotop">
 						<a href="#page">Back to Top</a>
-					</p>
+-->					</p>
 				</div>
 			</footer>
 
