--- a/_includes/themes/the-program/post.html
+++ b/_includes/themes/the-program/post.html
@@ -60,10 +60,10 @@
 							{% endif %}
 						</ul>
 					</nav>
-					<p class="gotop">
+<!--					<p class="gotop">
 						<a href="#page">Back to Top</a>
 					</p>
-				</div>
+-->				</div>
 			</footer>
 
 		</div><!-- content -->
