--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -6,12 +6,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="google-site-verification" content="YhVSW09APGt4Hsx3P78H6RVvoPjrwYl7JbG7V2tVwq4" />
 	<title>{{ page.title }}</title>
 	<meta name="author" content="{{ site.author.name }}">
 	<link href='{{ ASSET_PATH }}/css/style.css' rel="stylesheet" media="all">
 	<link href='{{ ASSET_PATH }}/css/extra.css' rel="stylesheet" media="all">
 	<link href="http://feeds.feedburner.com/{{ site.author.feedbaname }}" rel="alternate" title="{{ page.title }}" type="application/atom+xml">
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 </head>
 <body>
 
@@ -25,9 +27,6 @@
 						<li class="archive"><a href="/blog.html">Blog</a></li>
 						<li class="archive"><a href="/about.html">about</a></li>
 						<li class="archive"><a href="/contact.html">contact</a></li>
-						<li class="page"><a href="/pages.html">pages</a></li>
-						<li class="category"><a href="/categories.html">categories</a></li>
-						<li class="tag"><a href="/tags.html">tags</a></li>
 						
 					</ul>
 				</nav>
@@ -53,7 +52,7 @@
 					</p>
 					</div>
 					<ul>
-						<li class="contact"><address><span class="author fn n">{{ site.author.name }}</span> - <span class="fn email">{{ site.author.email }}</span></address></li>
+						<li class="contact"><a href='/contact.html'><strong>contact</strong> me</a></li>
 						<li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">check my <strong>github</strong> repos</a></li>
 						<li class="twitter"><a href="http://twitter.com/{{ site.author.twitter }}/" rel="me">follow me on <strong>twitter</strong></a></li>
 						<li class="rss"><a href="http://feeds.feedburner.com/{{ site.author.feedname }}">subscribe to my <strong>RSS</strong> feed</a></li>
