--- a/assets/themes/the-program/css/extra.css
+++ b/assets/themes/the-program/css/extra.css
@@ -1,3 +1,96 @@
+div.meta {
+    border-top: 1px dashed #2D2D2D;
+    padding-top: 15px;
+}
+
+.meta li.list-head {
+  font-size: 18px;
+    font-weight: bold;
+    margin-left: -10px;
+    margin-top: 10px;
+    width: 100%;
+}
+.meta ul.list-category  {
+	display: none;
+}
+.unit-article header h1 {
+ border: 0px;
+}
+
+h1, .h1 {
+    border-bottom: 1px dashed #2D2D2D;
+    font-size: 2.6em;
+    line-height: 52px;
+    margin-bottom: 5px;
+    margin-top: 0px;
+}
+.unit-article h3 {
+    font-size: 18px;
+    line-height: 18px;
+    margin-bottom: 5px;
+    margin-top: 0px;
+}
+
+.unit-article h2  {
+    font-size: 20px;
+    line-height: 16px;
+    margin-bottom: 5;
+    margin-top: 0px;
+}
+
+.unit-article .list-category a,
+.unit-article .list-tag a {
+  background-color: #DF3D4D;
+  float: left;
+  border: 1px solid #DF3D4D;
+  padding: 6px 6px 3px;
+  -webkit-border-radius: cl53px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  margin: 5px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  -moz-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  vertical-align: bottom;
+}
+
+.unit-article .list-category a:active,
+.unit-article .list-tag a:active {
+}
+.unit-article .list-category a:hover,
+.unit-article .list-tag a:hover {
+}
+.unit-article .list-category a:hover span,
+.unit-article .list-tag a:hover span {
+  background-color: #e1e1e1;
+}
+.unit-article .list-category span,
+.unit-article .list-tag span {
+  background-color: #fafafa;
+  border: 1px solid #DF3D4D;
+  padding: 1px 5px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  color: #1a1a1a;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  top: -1px;
+  font-weight: bold;
+  font-size: 13px;
+}
+
+
+
+
+
 .unit-article ul.posts span.date {
  padding: 5px;
  font-size: 1.2em;
@@ -29,5 +122,5 @@
 
 .unit-article ul.posts li a {
 	font-size: 1.2em;
-	padding: 5px;
+	padding: 5px 5px 4px;
 }	
