--- a/assets/themes/the-program/css/style.css
+++ b/assets/themes/the-program/css/style.css
@@ -548,7 +548,7 @@ html {
   background: url('/assets/themes/the-program/skin/100-90-5-monochrome.png');
   background-repeat: repeat;
   background-position: 0 0;
-  background-color: #e2e2de;
+  background-color: #e9e0c8;
 }
 .body .unit-body {
   background-color: #fafafa;
@@ -654,7 +654,7 @@ pre {
 
 .unit-article a:hover {
 	background-color:#DF3D4D; 
-	border-bottom:0px;
+	border-bottom:1px solid #DF3D4D;
 	color: #FAFAFA;
 }
 
@@ -822,11 +822,6 @@ pre {
   vertical-align: bottom;
 }
 .layout-page .tag_box a:active {
-  -webkit-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
-  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
-  background: #336633;
-  border: solid #336633;
 }
 .layout-page .tag_box a:hover {
 }
@@ -996,6 +991,9 @@ color: #FAFAFA;
 	Not that old computer layout 
 */
 @media only screen and (min-width: 1280px) {
+.content {
+padding: 0px;
+}
   .the-header .unit-head .nav-global .logo {
     border-bottom: 0 none;
     display: block;
