added new stuff

--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -46,7 +46,7 @@
 		<div class="unit-foot">
 			<div class="unit-inner unit-foot-inner">
 				<div class="misc vcard">
-					<h4>about frnk</h4>
+					<h4>about</h4>
 					<div><p>
 						{{ site.author.intro }}
 					</p>
