--- a/_includes/themes/the-program/post.html
+++ b/_includes/themes/the-program/post.html
@@ -4,48 +4,73 @@
 			<header>
 				<div class="unit-head">
 					<div class="unit-inner unit-head-inner">
+<span class='date'>{{ page.date | date: "%B %e, %Y" }}</span>
 						<h1 class="h2 entry-title">{{ page.title }}</h1>
 					</div><!-- unit-inner -->
 				</div><!-- unit-head -->
 			</header>
+<div class="meta">
+                                                <ul class="list-category list-linear">
+                                                        <li class="list-head">category: </li>
+                                                        {% assign categories_list = page.categories %}
+                                                        {% include JB/categories_list %}
+                                                </ul>
+                                                <ul class="list-tag list-linear">                                                        <li class="list-head">tags: </li>
+                                                        {% assign tags_list = page.tags %}
+                                                        {% include JB/tags_list %}
+                                                </ul>
+                                        </div><!-- meta -->
 
 			<div class="bd">
 				<div class="entry-content">
 					{{ content }}
-					<div class="meta">
-						<p class="date-publish">
-							Published: 
-							<date class="date-pub" title="{{ page.date | date_to_xmlschema }}" datetime="{{ page.date | date_to_xmlschema }}" pubdate>
-							<span class="month"><abbr>{{ page.date | date: '%B' }}</abbr></span>
-							<span class="day">{{ page.date | date: '%d' }}</span>
-							<span class="year">{{ page.date | date: '%Y' }}</span>
-							</date>
-						</p>
-						<ul class="list-category list-linear">
-							<li class="list-head">category: </li>
-							{% assign categories_list = page.categories %}
-							{% include JB/categories_list %}
-						</ul>
-						<ul class="list-tag list-linear">
-							<li class="list-head">tags: </li>
-							{% assign tags_list = page.tags %}
-							{% include JB/tags_list %}
-						</ul>
-					</div><!-- meta -->
 				</div><!-- entry-content -->
+	<div class="related">
+<h1>Related Posts</h1>
+<ul class="posts">
+{% for post in site.related_posts %}
+<li><span class='date'>{{ post.date | date: "%B %e, %Y" }}</span><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
+<span class='slug'>{{ post.content | strip_html | truncatewords : 100 }}...</span>
+
+</li>
+
+{% endfor %}
+</ul>
+	</div>
+<!--
+   <footer class="unit-foot">
+                                <div class="unit-inner unit-foot-inner">
+                                       <nav class="pagination">
+                                                <ul>
+                                                        {% if page.previous %}
+                                                        <li class="prev"><a class="internal" rel="prev"  href="{{ page.previous.url }}" title="View {{ page.previous.title }}">&laquo; {{ page.previous.title }}</a></li>
+                                                        {% endif %}
+                                                        {% if page.previous and page.next %}
+                                                        <li class="pipe"> | </li>
+                                                        {% endif %}
+                                                        {% if page.next %}
+                                                        <li class="next"><a class="internal" rel="next"  href="{{ page.next.url }}" title="View {{ page.next.title }}">{{ page.next.title }} &raquo;</a></li>
+                                                        {% endif %}
+                                                </ul>
+                                        </nav>
+-->
+                        </footer>
+
 				<div class="misc-content">
+					<h1>Discussion</h1>
 					<div class="social">
 						<ul class="list-linear">
 							<li><div class="twitter-tweet"><a href="https://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="{{ site.author.twitter }}" data-lang="en">Tweet</a></div></li>
 							<li><div class="twitter-follow"><a href="https://twitter.com/{{ site.author.twitter }}" class="twitter-follow-button" data-show-count="false" data-lang="en"></a></div></li>
 						</ul>
+
 					</div>
 					<div class="comment">
 					{% include JB/comments %}
 					</div>
 				</div><!-- misc-content -->
 			</div><!-- bd -->
-			<footer class="unit-foot">
+	<!--		<footer class="unit-foot">
 				<div class="unit-inner unit-foot-inner">
 					<nav class="pagination">
 						<ul>
@@ -60,12 +85,12 @@
 							{% endif %}
 						</ul>
 					</nav>
-<!--					<p class="gotop">
+					<p class="gotop">
 						<a href="#page">Back to Top</a>
 					</p>
--->				</div>
+				</div>
 			</footer>
-
+-->
 		</div><!-- content -->
 	</div><!-- unit-inner -->
 </article>
