--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,2 +1,2 @@
-<p>I am Stephan Florquin, and I love node.js, RabbitMQ, designing clever applications, and saving precious milliseconds&#8230;</p>
-<p><a href="/about.html" class="more">Learn more »</a></p>
+<p>Hello, I am Franco, I am a software engineer from Zurich, Switzerland. Currently I'm working at <a href="http://www.getunik.com" target="_new" />getunik ag</a>. I mostly code with <a href="http://symfony.com">Symfony2</a>, but do like other web technologies&#8230;</p>
+<p><a href="/about.html" class="more">Read more »</a></p>
