--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<title>{{ page.title }} | {{ site.theme.site_name }}</title>
 		<link rel='stylesheet'  href='/css/style.css' type='text/css' media='all' />
+		<link rel='stylesheet'  href='/css/frnk.css' type='text/css' media='all' />
+
 		<link href='http://fonts.googleapis.com/css?family=Poly:400,400italic' rel='stylesheet' type='text/css'>
 		<!--[if lt IE 9]>
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -42,7 +44,5 @@
 		<footer>
 			<p>Jekyll theme by <a href="http://stephan83.github.com">Stephan Florquin</a></p>
 		</footer>
-
-		<div><a href="https://github.com/stephan83/stephan83.github.com"><img style="position: fixed; top: 0; left: 0; border: 0; z-index: 32001;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub"></a></div>
 	</body>
 </html>
